# Quinto-Semestre

./: CMakeLists.txt  HW  HelloWorld.cpp  README.md  bG
Algoritmos/: BubbleSort.cpp
Algoritmos/PrimerParcial/: BubbleSort
Estudio PYTHON/: Calculations.py  HelloWorld.py  LifeofPi.py  Prueba_Strings_OperacionesMatematicas.py  pruebaOperaciones.py  resCodigo1.txt  resCodigo2.txt
Geometria Computacional/: a.out  circ  circle.cpp  puntos.txt
Geometria Computacional/libgraph-1.0.2/: Makefile  config.status  libtool
Operating-Systems/OS/LabOS/Lab3/: m  (+3 more)
Pruebas-Tarea-5/: GeometriaComputacional.pro
Semana i/: README.txt
Sistemas Operativos/: Demo.cpp  DemoVF.cpp  HelloWorld.cpp  ProcessID.c  a.out  exec.c  num.c  nxterms.c  pid  pid2.c  size  size.c
Sistemas Operativos/Clases/: states  states.c
Software/: FeatureExtraction.cpp  Union2-3.cpp  mainIdent.cpp
Tarea5-CF/: Tarea5.pro  arcs.cpp  arcs.h  arcs.ui  dialog.cpp  dialog.h  dialog.ui
build-GeometriaComputacional-Desktop_x86_windows_msys_pe_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.GeometriaComputacional.Debug  object_script.GeometriaComputacional.Release  ui_arcs.h  ui_cono.h  ui_cubo.h  ui_dialog.h  ui_poligonos.h  ui_prismarec.h  ui_prismatri.h
build-Tarea5-DanielRoa-Desktop-Debug/: Makefile  moc_arcos.cpp  moc_cono.cpp  moc_cubo.cpp  moc_dialog.cpp  moc_poligonos.cpp  moc_prismarec.cpp  moc_prismatri.cpp  ui_arcos.h  ui_cono.h  ui_cubo.h  ui_dialog.h  ui_poligonos.h  ui_prismarec.h  ui_prismatri.h
build-dir/: CMakeCache.txt
openCVDemo/: CMakeCache.txt  CMakeLists.txt
(+89 files in other folders)
